Make sure the terminal is fully visible on small screen dimensions

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -10,6 +10,15 @@
 	--width-panel: 15rem;
 }
 
+
+@media (width <= 850px)
+{
+	html
+	{
+		font-size: calc(100vw / 55);
+	}
+}
+
 html,
 body {
 	background-color: #0d0d0e;
